--- a/asteroids.html
+++ b/asteroids.html
@@ -92,6 +92,7 @@ function update() {
         if(soundEnabled == true) {
             soundEnabled = false;
             pew.play();
+            //console.log("hello");
         }
     }
     else {
